# godot-vlc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml
demo/: .gitignore  default_bus_layout.tres  icon.svg.import  main.tscn  project.godot  test.mp4.uid
demo/addons/godot-vlc/: .gdextension  .gdextension.uid  format_loader.gd  format_loader.gd.uid  godot_vlc.gdextension
demo/addons/godot-vlc/icons/: VLCMedia.svg.import  VLCMediaPlayer.svg.import  vlc.svg.import
demo/tests/: adapter_match.gd  adapter_match.gd.uid  gpu_render.gd  gpu_render.gd.uid  gpu_setup.gd  gpu_setup.gd.uid  wrong_driver.gd  wrong_driver.gd.uid
gdextension_template/: godot_vlc.gdextension  godot_vlc.gdextension.uid
gdextension_template/icons/: VLCMedia.svg.import
scripts/: build_debug.ps1  build_release.ps1  create_links.ps1  fetch_libvlc.ps1  publish.ps1  setup.ps1
src/: lib.rs  util.rs  video_stream_vlc.rs  vlc_instance.rs  vlc_media.rs  vlc_media_player.rs  vlc_track.rs  vlc_track_list.rs
src/vlc_media_player/: audio_callbacks.rs  events.rs  internal_audio_stream.rs  internal_audio_stream_playback.rs  software_video.rs
src/vlc_media_player/gpu_d3d11/: adapter.rs  event_queue.rs  importer.rs  mod.rs  output_callbacks.rs  private_queue.rs  rd_import.rs  shared_texture.rs
