[package]
name = "godot-vlc"
version = "1.2.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = {version = "0.5.2", features = ["experimental-threads", "register-docs", "api-4-3"]}
printf = "0.1.0"
ringbuf = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", optional = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Security",
  "Win32_System_Threading",
] }

[features]
default = ["gpu"]
gpu = ["dep:windows"]

[build-dependencies]
bindgen = "0.72.1"
